Fix excessive spacing between li elements

--- a/src/App.css
+++ b/src/App.css
@@ -2087,7 +2087,7 @@ li::marker {
 }
 
 ul li p {
-  margin-top: 0;
+  margin-top: 0 !important;
   margin-bottom: 0;
   line-height: 1.5;
 }
